--- a/css/A-1.css
+++ b/css/A-1.css
@@ -104,29 +104,124 @@ body {
     height: 200px;
     display: flex;
     padding: 10px 0;
+    gap: 5px;
 }
 
-.tap {
+.tab {
     flex: 1;
 }
 
-.notice{
-    display: none;
+.tab_title {
+    display: flex;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.tab_title li a {
+    display: block;
+    padding: 10px;
+    background-color: gainsboro;
+}
+
+.tab_title li.on a {
+    background-color: skyblue;
+}
+
+.tab_contents {
+    height: 136px;
+    background-color: gainsboro;
+    position: relative;
+}
+
+.tab_contents ul {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+}
+
+.notice li {
+    display: flex;
+    line-height: 2;
+}
+
+.notice li a {
+    display: block;
+    width: 300px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.notice li a:hover {
+    text-decoration: underline;
+}
+
+.notice li span {
+    margin-left: auto;
 }
 
 .gallery {
+    height: 136px;
+    gap: 10px;
     display: none;
+}
+
+.gallery li {
+    display: flex;
+    height: 100%;
+    width: 32%;
+    float: left;
+    margin-right: 2%;
+}
+
+.gallery li:last-child{
+    margin: 0
+}
+
+.gallery img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .banner {
     flex: 1;
 }
 
+.banner img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
 
 .link {
     flex: 1;
 }
 
+.link ul {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 10px;
+}
+
+.link ul li a {
+    background-color: gainsboro;
+    display: block;
+    text-align: center;
+    align-items: center;
+    height: 85px;
+    line-height: 85px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.link ul li a:hover {
+    background-color: skyblue;
+    color: #ffffff;
+}
 
 /* footer */
 .footer {
@@ -136,10 +231,44 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 0 10px;
-    background-color: lightcyan;
+    background-color: gainsboro;
 }
 
 /* modal */
 #modal {
     display: none;
+    width: 600px;
+    height: 400px;
+    border: #333333 1px solid;
+    background-color: #ffffff;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 40px 50px;
+}
+
+#modal h2{
+    padding: 10px 0;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #333333;
+    font-size: 30px;
+    width: 100%;
+}
+
+#modal p{
+    line-height: 2;
+}
+
+#modal .close{
+    display: block;
+    background-color: silver;
+    width: 60px;
+    height: 36px;
+    line-height: 36px;
+    text-align: center;
+    position: absolute;
+    bottom: 40px;
+    right: 50px;
+    cursor: pointer;
 }
