--- a/css/A-2.css
+++ b/css/A-2.css
@@ -38,23 +38,38 @@ body {
 
 .gnb {
     display: flex;
+    z-index: 1;
+    position: relative;
 }
 
-.gnb > li {
+.gnb::after {
+    content: '';
+    position: absolute;
+    top: 100px;
+    right: 0;
+    width: 1200px;
+    height: 0;
+    background-color: #eee;
+    transition: all 0.5s;
+}
+
+.gnb.active::after{
+    height: 160px;
+}
+
+.gnb li {
     position: relative;
 }
 
 .gnb > li > a {
     display: block;
     height: 100px;
+    padding: 0 60px;
     line-height: 100px;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 0 50px;
 }
 
 .gnb > li:hover > a {
-    color: skyblue;
+    color: green;
 }
 
 .gnb ul {
@@ -62,21 +77,19 @@ body {
     top: 100px;
     left: 0;
     width: 100%;
-    padding: 5px 0;
-    z-index: 1;
-    background-color:#ffffff;
+    padding: 8px 0;
     display: none;
+    z-index: 1;
 }
 
-.gnb ul a {
+.gnb ul li a {
     display: block;
+    padding: 14px 0;
     text-align: center;
-    align-items: center;
-    padding: 10px 0;
 }
 
-.gnb ul a:hover {
-    background-color: skyblue;
+.gnb ul li:hover a {
+    background-color: green;
     color: #ffffff;
 }
 
@@ -107,25 +120,64 @@ body {
     padding: 10px 0;
 }
 
-.tap {
+.notice {
     flex: 1;
+    height: 100%;
+    /* background-color: #eee; */
+    padding: 10px;
 }
 
-.notice{
-    display: none;
+.notice h3{
+    margin-bottom: 5px;
+}
+
+.notice li {
+    display: flex;
+    align-items: center;
+}
+
+.notice ul li a{
+   display: block;
+   width: 300px;
+   white-space: nowrap;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   padding: 5px 0;
+}
+
+.notice ul li a:hover{
+    text-decoration: underline;
 }
 
 .gallery {
-    display: none;
+    flex: 1;
+    height: 100%;
+    /* background-color: #ccc; */
+    padding: 10px;
+}
+
+.gallery h3 {
+    margin-bottom: 5px;
+}
+
+.gallery ul {
+    display: flex;
+    justify-content: space-between;
+}
+
+.gallery ul li a img {
+    width: 120px;
+    height: 120px;
 }
 
 .banner {
     flex: 1;
 }
 
-
-.link {
-    flex: 1;
+.banner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 
@@ -133,14 +185,65 @@ body {
 .footer {
     height: 100px;
     display: flex;
-    text-align: center;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 10px;
-    background-color: lightcyan;
+    background-color: rgb(221, 231, 221);
 }
 
+.footer .f_log {
+
+}
+.footer p {
+    width: 70%;
+    text-align: center;
+}
+.footer .f_fam {
+
+}
+
+
 /* modal */
-#modal {
+.popupbg{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 998;
     display: none;
+}
+
+#modal {
+    width: 600px;
+    height: 400px;
+    border: #333333 1px solid;
+    background-color: #ffffff;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding: 40px 50px;
+    z-index: 999;
+    display: none;
+}
+
+#modal h2 {
+    margin-bottom: 10px;
+    border-bottom: solid 1px #333333;
+    padding-bottom: 10px;
+}
+
+#modal p {
+    line-height: 2;
+}
+
+#modal .close {
+    display: block;
+    background-color: silver;
+    width: 60px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    position: absolute;
+    bottom: 40px;
+    right: 50px;
+    cursor: pointer;
 }
